--- a/HephaestusEngine/HephaestusEngine.vcxproj.filters
+++ b/HephaestusEngine/HephaestusEngine.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="HephaestusEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="tex\clouds.png">
