--- a/HephaestusEngine/HephaestusEngine.vcxproj
+++ b/HephaestusEngine/HephaestusEngine.vcxproj
@@ -155,19 +155,23 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="chunk_manager.h" />
     <ClInclude Include="treeChunk.h" />
     <ClInclude Include="splay.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="util\camera.h" />
+    <ClInclude Include="util\intervaltree.h" />
     <ClInclude Include="util\lodepng.h" />
     <ClInclude Include="util\mesh.h" />
     <ClInclude Include="util\shader.h" />
-    <ClInclude Include="util\Terrain_Gen.h" />
+    <ClInclude Include="util\TerrainGen.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="chunk_manager.cpp" />
     <ClCompile Include="HephaestusEngine.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="treeChunk.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
