inline fixes, beginning self-balancing interval tree implementation

--- a/HephaestusEngine/HephaestusEngine.vcxproj.filters
+++ b/HephaestusEngine/HephaestusEngine.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClInclude Include="util\rle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="interval.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="util\lodepng.cpp">
