--- a/HephaestusEngine/HephaestusEngine.vcxproj.filters
+++ b/HephaestusEngine/HephaestusEngine.vcxproj.filters
@@ -40,9 +40,6 @@
     <ClInclude Include="util\camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="util\lodepng.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="util\mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -67,11 +64,17 @@
     <ClInclude Include="util\lodeTexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="util\lodepng.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="octreeChunk.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Octree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="util\lodepng.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="treeChunk.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -79,6 +82,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="util\lodepng.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="octreeChunk.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
