--- a/HephaestusEngine/HephaestusEngine.vcxproj
+++ b/HephaestusEngine/HephaestusEngine.vcxproj
@@ -160,8 +160,6 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SIMD.h" />
-    <ClInclude Include="SIMD_AVX.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="util\camera.h" />
     <ClInclude Include="util\intervaltree.h" />
@@ -172,6 +170,13 @@
     <ClInclude Include="util\MortonChunk.h" />
     <ClInclude Include="util\rle.h" />
     <ClInclude Include="util\shader.h" />
+    <ClInclude Include="util\SIMD\SIMD.h" />
+    <ClInclude Include="util\SIMD\SIMD_AVX.h" />
+    <ClInclude Include="util\SIMD\SIMD_Constants.h" />
+    <ClInclude Include="util\SIMD\SIMD_Math.h" />
+    <ClInclude Include="util\SIMD\SIMD_Noise.h" />
+    <ClInclude Include="util\SIMD\SIMD_SSE.h" />
+    <ClInclude Include="util\SIMD\SIMD_VecSet.h" />
     <ClInclude Include="util\TerrainGen.h" />
   </ItemGroup>
   <ItemGroup>
@@ -193,16 +198,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="compressed_fragment.glsl">
-      <DeploymentContent>true</DeploymentContent>
-      <FileType>Document</FileType>
-    </Text>
-    <Text Include="compressed_vertex.glsl">
-      <DeploymentContent>true</DeploymentContent>
-      <FileType>Document</FileType>
-    </Text>
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\blocks\brick.png">
@@ -320,6 +315,10 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
       <DeploymentContent>false</DeploymentContent>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\fragment.glsl" />
+    <None Include="shaders\vertex.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
